[tool.poetry]
name = "meili"
version = "0.1.0"
description = ""
authors = ["James Gaither <james@jamesgaither.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ExifRead = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
